<?xml version="1.0" encoding="utf-8"?>

<!--/*      Created by Roberto Mariani and Anna Berkovitch, 2015-2016
        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see <http://www.gnu.org/licenses/>.*/-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="STATUS BAR MODS"/>
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Stock Battery" android:key="hide_battery_stock" android:defaultValue="true" android:summaryOn="Show" android:summaryOff="Hide" />
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="3Minit Battery" android:key="minit_battery_visible" android:defaultValue="true" android:summaryOn="Show" android:summaryOff="Hide" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:summary="Choose from more than 1000 battery styles"
        app:componentName="com.three.minit.minitbatterysettings.free/com.three.minit.minitbatterysettings.MainActivity" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:summary="Fully Customize your status bar clock"
        app:componentName="three.minit.clock/three.minit.clock.ClockSettings" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:summary="Control Clock Color, Position and Styles"
        app:componentName="com.potato.clock.main/com.potato.clock.main.Main" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:summary="StatusBar Color Mod"
        app:componentName="com.potato.gradientapp/com.potato.gradientapp.MainActivity" />
    <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/SignalPositionName" android:title="Signal Position" android:key="leftsignal" android:defaultValue="0" android:entryValues="@array/SignalPositionValue" />
    <PreferenceScreen android:title="Virtual Recent + Home + Lock button">
        <PreferenceCategory android:title="Virtual Button" />
        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="left corner recents" android:key="cocoyaya_leftcornertask" android:defaultValue="false" android:summaryOn="On" android:summaryOff="Off" />
        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="left corner home" android:key="cocoyaya_leftcornerhome" android:defaultValue="false" android:summaryOn="On" android:summaryOff="Off" />
        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="center recents" android:key="cocoyaya_centertask" android:defaultValue="false" android:summaryOn="On" android:summaryOff="Off" />
        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="center home" android:key="cocoyaya_centerhome" android:defaultValue="false" android:summaryOn="On" android:summaryOff="Off" />
        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="right corner lock" android:key="cocoyaya_rightcornerlock" android:defaultValue="false" android:summaryOn="On" android:summaryOff="Off" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/network_traffic_title" android:summary="@string/network_traffic_summary">
        <PreferenceCategory android:title="@string/sb_traffic_title" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/sb_traffic_entries" android:title="@string/sb_traffic_align_title" android:key="status_bar_traffic_position" android:defaultValue="1" android:entryValues="@array/sb_traffic_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/sb_traffic_line_entries" android:title="@string/sb_traffic_line_title" android:key="status_bar_traffic_line" android:defaultValue="1" android:entryValues="@array/sb_traffic_line_values" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/sb_traffic_color_title" android:key="status_bar_traffic_color" android:defaultValue="\#ffffffff" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/sb_traffic_font_style_entries" android:title="@string/sb_traffic_font_title" android:key="status_bar_traffic_font" android:defaultValue="0" android:entryValues="@array/traffic_font_style_values" />
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:icon="@null" android:max="23" android:title="@string/sb_traffic_size_title" android:key="status_bar_traffic_size" android:defaultValue="16" min="5" unitsRight="dp" />
        <PreferenceScreen android:title="@string/sb_traffic_adv_custom_title">
            <PreferenceCategory android:title="@string/sb_traffic_adv_custom_title" />
            <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:icon="@null" android:max="10" android:title="@string/sb_traffic_shadow_r_title" android:key="status_bar_traffic_shadow_r" android:defaultValue="1" min="0" unitsRight="" />
            <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:icon="@null" android:max="5" android:title="@string/sb_traffic_shadow_x_title" android:key="status_bar_traffic_shadow_x" android:defaultValue="0" min="-5" unitsRight="" />
            <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:icon="@null" android:max="5" android:title="@string/sb_traffic_shadow_y_title" android:key="status_bar_traffic_shadow_y" android:defaultValue="0" min="-5" unitsRight="" />
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/sb_traffic_shadow_c_title" android:key="status_bar_traffic_shadow_c" android:defaultValue="\#89000000" />
        </PreferenceScreen>
    </PreferenceScreen>
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Single swipe for Quickpanel" android:key="tweaks_qs_pulldown" android:defaultValue="true" android:summaryOn="Feature is enabled" android:summaryOff="Feature is disabled" />
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Make Ongoing Notifications Removable" android:key="ongoing_notifications" android:defaultValue="false" android:summaryOn="Ongoing Notifications are removeable" android:summaryOff="Ongoing Notifications are permanent" />
    <PreferenceCategory android:title="CUSTOM TEXT OPTIONS" />
    <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Status Bar Custom text" android:key="CustomTxt_toggle" android:defaultValue="true" android:summaryOn="@string/summaryOn" android:summaryOff="@string/summaryOff" />
    <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Change custom text color" android:key="CustomTxt_color" android:summary="Choose color" android:dependency="CustomTxt_toggle" android:defaultValue="-13542266" />
    <com.wubydax.romcontrol.v2.prefs.MyEditTextPreference android:title="Change custom text" android:key="CustomTxt_text" android:summary="Edit text" android:dependency="CustomTxt_toggle" android:defaultValue="Echoe ROM" android:dialogTitle="Edit text" />
    <PreferenceCategory android:title="RECENT PANEL OPTIONS">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Recent Panel Quick Launch" android:key="recents_quick_launch" android:defaultValue="false" android:summaryOn="Quick Launch is shown" android:summaryOff="Quick Launch is hidden" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="AOKP Ram Bar" android:key="aokpram" android:defaultValue="true" android:summaryOn="Ram Bar On" android:summaryOff="Ram Bar Off" app:isSilent="false" app:packageNameToKill="com.android.systemui" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Free ram color" android:key="ram_color1" android:defaultValue="\#ffffffff" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Used ram color" android:key="ram_color2" android:defaultValue="\#ffffffff" />
    </PreferenceCategory>
</PreferenceScreen>